--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1>Expense Tracker</h1>
+<h1>Harshavardhan Babu Gondipalli<h1>
+<h2>C0893432</h2>
 
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
